[project]
name = "stat-pre1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.3.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "distro==1.9.0",
    "docutils==0.21.2",
    "duckdb==1.2.1",
    "fastjsonschema==2.21.1",
    "fonttools==4.56.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "japanize-matplotlib==1.1.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "marimo==0.11.20",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "narwhals==1.30.0",
    "nbformat==5.10.4",
    "numpy==2.2.3",
    "openai==1.66.3",
    "packaging==24.2",
    "parso==0.8.4",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "polars==1.25.2",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pycrdt==0.11.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pymdown-extensions==10.14.3",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.23.1",
    "ruff==0.11.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlglot==26.10.1",
    "starlette==0.46.1",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
]
